kubernetes/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: kiii-project1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi
          image: darkopavikevik12/fastapi:latest
          ports:
            - containerPort: 80
