kubernetes/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: kiii-project1
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
