kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kiii-project1
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
